# allpassphase

./: .editorconfig  .gitattributes  AGENTS.md  AllPassFilter.cpp  AllPassPhase.cpp  AllPassPhase.h  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Dsp/: AllPassFilter.cpp  AllPassFilter.h  HardClip.cpp  HardClip.h  LRCrossoverFilter.cpp  LRCrossoverFilter.h
